--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
+    "uuid": "^9.0.1",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
