--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
+    "swiper": "^11.0.7",
     "uuid": "^9.0.1",
     "vite-plugin-svgr": "^4.2.0"
   },
